--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon --env-file=.env server.js"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "ws": "^8.19.0"
   }
 }
